# LlaMa

examples/: CMakeLists.txt  lit.cfg.py
examples/BuddyDeepSeekR1/: CMakeLists.txt  README.md  buddy-deepseek-r1-annotation.mlir  log.mlir  log0.mlir  log1.mlir  log2.mlir  makefile  test.mlir
examples/BuddyLlama/: CMakeLists.txt  llama-main.cpp  op.txt  subgraph.mlir
examples/BuddyTensorParallel/: CMakeLists old.txt  CMakeLists.txt  import-deepseek-r1.py  llama-main.cpp
examples/BuddyTensorParallel/arch/dstest/: forward0_decode.mlir  forward0_prefill.mlir  forward169_decode.mlir  forward169_prefill.mlir  forward1_decode.mlir  forward1_prefill.mlir  forward2_decode.mlir  forward2_prefill.mlir  forward3_decode.mlir  forward3_prefill.mlir  forward5_decode.mlir  forward5_prefill.mlir  subgraph0_decode.mlir  subgraph0_prefill.mlir  subgraph169_decode.mlir  subgraph169_prefill.mlir  subgraph1_decode.mlir  subgraph1_prefill.mlir  subgraph2_decode.mlir  subgraph2_prefill.mlir  subgraph3_decode.mlir  subgraph3_prefill.mlir  subgraph5_decode.mlir  subgraph5_prefill.mlir
examples/BuddyTensorParallel/arch/usefulFile/: decodeOp  decodeSimpleOp  prefillOp  prefillSimpleOp  subgraph0_decode.mlir  subgraph0_prefill.mlir
examples/HeterLeNet/: CMakeCache.txt  CMakeLists.txt  buddy-lenet-import-test.py  buddy-lenet-import.py  buddy-lenet-main-test.cpp  buddy-lenet-main.cpp  makefile
examples/LlamaTest/: .gitignore  CMakeLists.txt  README.md  SharedQueueTemp.h  add_split_forward.mlir  add_split_subgraph.mlir  concat_forward.mlir  concat_subgraph.mlir  fake-forward0.mlir  fake-forward1.mlir  fake-forward2.mlir  fake-forward3.mlir  fake-forward4.mlir  fake-forward5.mlir  fake-subgraph0.mlir  fake-subgraph1.mlir  fake-subgraph2.mlir  fake-subgraph3.mlir  fake-subgraph4.mlir  fake-subgraph5.mlir  forward1.mlir  graph.mlir  llama-import.py  llama-main.cpp  llama-paral.cpp  log.txt  model_computation_graph  op_main_graph.txt  split_forward.mlir  split_subgraph.mlir  subgraph.mlir  subgraph1.mlir
examples/SplitLlama/: .gitignore  BaseDisModel.h  CMakeLists.txt  COMPARISON_EXAMPLES.md  COMPLETION_REPORT.md  MPI_COLLECTIVE_OPS.md  MPI_COMPARISON.md  OPTIMIZATION_GUIDE.md  QUICK_START.md  README.md  REFACTORING_SUMMARY.md  SharedQueueTemp.h  concatante.h  import-llama2.py  llama-add-mha-0.cpp  llama-add-mha.cpp  llama-add-mlp-0.cpp  llama-add-mlp.cpp  llama-import.py  llama-input.cpp  llama-main-mpi-collective.cpp  llama-main-optimized.cpp  llama-main-refactored.cpp  llama-main.cpp  llama-mha-0.cpp  llama-mha.cpp  llama-mlp-0.cpp  llama-mlp.cpp  llama-output.cpp  llama-project.cpp  llama-rms-mha-0.cpp  llama-rms-mha.cpp  llama-rms-mlp-0.cpp  llama-rms-mlp.cpp  llamaAdd.h  llamaInput.h  llamaMHA.h  llamaMLP.h  llamaOutput.h  llamaRMS.h  (+1 more)
frontend/Interfaces/buddy/Core/: Container.h
frontend/Python/graph/: device.py  graph.py  graph_driver.py  operation.py  strategy.py  type.py
frontend/Python/graph/transform/: fuse_ops.py
frontend/Python/ops/: func.py  linalg.py  tosa.py
